tests/baselines/reference/unusedInterfaceinNamespace3.errors.txt
tests/cases/compiler/unusedInterfaceinNamespace3.ts(10,5): error TS6133: 'i3' is declared but its value is never read.


==== tests/cases/compiler/unusedInterfaceinNamespace3.ts (1 errors) ====
    namespace Validation {
        interface i1 {
    
        }
    
        export interface i2 {
    
        }
    
        interface i3 extends i1 {
        ~~~~~~~~~~~~
!!! error TS6133: 'i3' is declared but its value is never read.
    
        }
    }